--- a/src/components/FeedbackControl/feedbackControl.scss
+++ b/src/components/FeedbackControl/feedbackControl.scss
@@ -1,8 +1,9 @@
 .FeedbackControl {
     display: flex;
+    justify-content: flex-end;
 
     .feedback-message {
-        margin: auto;
+        margin: auto 0;
         font-family: Lato;
         font-size: 14px;
         color: #7a7a7a;
@@ -16,13 +17,13 @@
         transform: scale(1);
         transition: .2s transform ease-in-out;
 
-        &.up {
-            // background-color: #B5C99A;
-        }
+        // &.up {
+        //     // background-color: #B5C99A;
+        // }
 
-        &.down {
-            // background-color: #862B0D;
-        }
+        // &.down {
+        //     // background-color: #862B0D;
+        // }
 
         &:hover {
             transform: scale(1.1);
