--- a/src/components/Input/input.scss
+++ b/src/components/Input/input.scss
@@ -1,15 +1,24 @@
-.Input {
-    width: 100%;
-    height: 45px;
-    border-radius: 8px;
-    padding: 4px 8px;
-    box-sizing: border-box;
-    border: 0.5px solid #ccc;
-    transition: .2s border ease-in-out;
+.Input_wrapper {
+    text-align: start;
 
-    &:focus {
-        outline: none;
-        border-color: #6780ff;
-        border-width: 1px;
+    .Input_label {
+        margin: 4px 0;
+        display: block;
+    }
+
+    .Input {
+        width: 100%;
+        height: 45px;
+        border-radius: 8px;
+        padding: 4px 8px;
+        box-sizing: border-box;
+        border: 0.5px solid #ccc;
+        transition: .2s border ease-in-out;
+
+        &:focus {
+            outline: none;
+            border-color: #6780ff;
+            border-width: 1px;
+        }
     }
 }
