--- a/src/App.scss
+++ b/src/App.scss
@@ -8,6 +8,12 @@
     box-sizing: border-box;
     background-color: #f2f2f2;
 
+    .new_button {
+        position: absolute;
+        top: 70px;
+        right: 20px;
+    }
+
     .chat-section {
         width: 100%;
         height: 100%;
