--- a/src/components/FeedbackControl/feedbackControl.scss
+++ b/src/components/FeedbackControl/feedbackControl.scss
@@ -4,7 +4,7 @@
 
     .feedback-message {
         margin: auto 0;
-        font-family: Lato;
+        font-family: Lato, sans-serif;
         font-size: 14px;
         color: #7a7a7a;
     }
