--- a/src/components/Message/UserMessage.scss
+++ b/src/components/Message/UserMessage.scss
@@ -2,7 +2,7 @@
     border-radius: 8px;
     padding: 8px 12px;
     text-align: left;
-    font-family: Lato;
+    font-family: Lato, sans-serif;
     font-size: 14px;
     font-weight: 400;
     background-color: #f2f2f7;
