--- a/src/components/Message/message.scss
+++ b/src/components/Message/message.scss
@@ -14,7 +14,7 @@
             border-radius: 8px;
             padding: 8px 12px;
             text-align: left;
-            font-family: Lato;
+            font-family: Lato, sans-serif;
             font-size: 14px;
             font-weight: 400;
 
