--- a/src/components/Message/message.scss
+++ b/src/components/Message/message.scss
@@ -10,6 +10,9 @@
             opacity: 1;
         }
 
+        .message {
+            white-space: pre-line;
+        }
         .message-item {
             border-radius: 8px;
             padding: 8px 12px;
